2008-04-28  Corinna Vinschen  <corinna@vinschen.de>

	* kernel32.cc (CreateFileMappingW): Remove stray small_printf.

2008-04-28  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (IsWow64Process): Remove.
	(Wow64DisableWow64FsRedirection): Remove.
	(Wow64RevertWow64FsRedirection): Remove.
	* ntdll.h (enum _PROCESSINFOCLASS): Define ProcessWow64Information.
	* init.cc (respawn_wow64_process): Use NtQueryInformationProcess to
	get WOW64 state.
	* wincap.cc (wincapc::init): Ditto.
	* wincap.h (wincapc::wow64): Change type to ULONG.

2008-04-27  Corinna Vinschen  <corinna@vinschen.de>

	* wincap.h (wincapc::wow64): Change type to BOOL.
	* wincap.cc: Remove explicit use of this pointer in wincapc methods.
	(wincapc::init): Fix bug in IsWow64Process handling.

2008-04-26  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (dll_crt0_0): Set SEM_NOGPFAULTERRORBOX error mode, too,
	to accommodate Vista/Longhorn.
	* spawn.cc (spawn_guts): Move check for CREATE_SUSPENDED condition
	after the call to ch.set() since it depends on it.

2008-04-25  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (install): Drop install rules for postinstall script.

2008-04-25  Corinna Vinschen  <corinna@vinschen.de>

	* postinstall: Remove (Moved to base-cygwin package).

2008-04-25  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Move handling FILE_ATTRIBUTE_NORMAL
	back to its old place.  Or it to file_attributes instead of setting it.

2008-04-25  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): *Only* handle SYSTEM and HIDDEN
	attributes in FILE_OVERWRITE case.

2008-04-25  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Handle SYSTEM and HIDDEN attributes
	in FILE_OVERWRITE case as well.

2008-04-24  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::fstat_helper): Disable calling
	pc.ndisk_links.  Just use nNumberOfLinks instead.
